src/assets/css/characters.css
/*no characters text*/
.no-chars-text {
   animation: blink 4s ease-in-out infinite;
}
/*character card*/
.blocks-container {
   display: grid;
   grid-template-columns: repeat(6, auto);
   grid-template-rows: 1fr 7fr 2fr 1fr 1fr;
   gap: 0.2rem;
   grid-template-areas:
      "name name class class class class"
      "avatar avatar avatar characteristics characteristics characteristics"
      "stats stats stats characteristics characteristics characteristics"
      "abilities abilities abilities inventory inventory inventory"
      "select select select select select delete";
   padding: 1rem;
   will-change: transform;
   position: relative;
   transition: transform 0.2s ease;
   overflow: auto;
}
/*character creation card*/
.create-blocks-container {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: 1fr 1fr 7fr 2fr;
   gap: 0.2rem;
   grid-template-areas:
      "name name name race race race"
      "name name name profession profession profession"
      "hint hint hint hint characteristics characteristics"
      "stats stats stats stats characteristics characteristics";
   padding: 1rem;
   will-change: transform;
   position: relative;
   transition: transform 0.2s ease;
   overflow: auto;
}
.blocks-container *,
.create-blocks-container * {
   font-size: clamp(0.5rem, 3.3vw, 4rem);
}

.blocks-container.pulse {
   animation: pulseGlow 0.6s ease;
   position: relative;
   overflow: hidden;
}
.blocks-container.pulse::before {
   content: "";
   position: absolute;
   top: 0;
   left: -100%;
   width: 50%;
   height: 100%;
   background: linear-gradient(
      120deg,
      rgba(255, 255, 255, 0) 0%,
      rgba(255, 255, 255, 0.4) 50%,
      rgba(255, 255, 255, 0) 100%
   );
   transform: skewX(-20deg);
   animation: shine 1s ease-out forwards;
   pointer-events: none;
   z-index: 10;
}
/*glow animation for character selection*/
@keyframes pulseGlow {
   0% {
      transform: scale(1);
   }
   50% {
      transform: scale(1.03);
   }
   100% {
      transform: scale(1);
   }
}
/*shine animation for character selection*/
@keyframes shine {
   0% {
      left: -100%;
   }
   100% {
      left: 180%;
   }
}

/*grid-area classes*/
.grid-area-name {
   grid-area: name;
   font-size: clamp(1rem, 2.5vw, 4rem);
}
.grid-area-class {
   grid-area: class;
}
.grid-area-avatar {
   grid-area: avatar;
}
.grid-area-characteristics {
   grid-area: characteristics;
   overflow: auto;
}
.grid-area-stats {
   grid-area: stats;
}
.grid-area-abilities {
   grid-area: abilities;
}
.grid-area-inventory {
   grid-area: inventory;
}
.grid-area-select {
   grid-area: select;
   transition: all 0.2s ease-in-out;
}
.grid-area-delete {
   grid-area: delete;
}
.grid-area-delete img {
   max-width: clamp(1rem, 1vw, 2.5rem);
}
/*specifically for character creation*/
.grid-area-race {
   grid-area: race;
}
.grid-area-profession {
   grid-area: profession;
}
.grid-area-hint {
   grid-area: hint;
}
.grid-area-hint span {
   animation: blink 3s ease-in-out infinite;
}
@keyframes blink {
   0% {
      opacity: 0;
   }
   30% {
      opacity: 1;
   }
   70% {
      opacity: 1;
   }
   100% {
      opacity: 0;
   }
}

/*characteristics and stats*/
.stats {
   display: flex;
   justify-content: center;
   align-items: center;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   width: clamp(3.5rem, 2vw, 4rem);
   height: clamp(3.5rem, 2vw, 4rem);
}
.stats:nth-child(1) {
   width: clamp(3.2rem, 2vw, 4rem);
   height: clamp(3.2rem, 2vw, 4rem);
}
.stats span {
   border-radius: 100%;
   width: 1.2rem;
   height: 1.2rem;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 0.5rem;
   background-color: #4c3825;
}
.characteristics {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 0.2rem;
   align-items: center;
}
.characteristics > span:nth-child(1) {
   font-weight: 800;
   font-size: clamp(1rem, 3.4vw, 1rem);
}
.characteristics > span:nth-child(2) {
   opacity: 0.7;
   font-size: clamp(0.8rem, 3.4vw, 1rem);
}
/*specifically for character creation*/
.characteristics div button {
   width: 1.1rem;
   height: 1.1rem;
   border-radius: 100%;
}
.characteristics div button:disabled {
   opacity: 0.5;
}
.characteristics div button:disabled:active {
   transform: scale(1);
}
.characteristics div span {
   font-weight: 800;
   font-size: clamp(1rem, 3.4vw, 1rem);
}
.characteristics-btn {
   transition: all 0.1s ease-in-out;
   transform: scale(1);
   padding: 0;
}
.characteristics-btn:active {
   transform: scale(0.8);
}

/*buttons at the under card and over it*/
.header-btns a button,
.footer-btns button {
   width: clamp(2rem, 3vw, 3.5rem);
   height: clamp(2rem, 3vw, 3.5rem);
   padding: clamp(0.2rem, 1vw, 1rem);
}
.header-btns button {
   font-size: clamp(0.5rem, 3.3vw, 4rem);
   padding: clamp(0.2rem, 2.2vw, 1rem);
}
.header-btns,
.footer-btns {
   position: absolute;
   left: 0;
   right: 0;
   z-index: 10;
   display: flex;
}

.header-btns {
   top: 0;
}
.footer-btns {
   bottom: 0;
}
.swiper {
   padding-top: 4.3rem !important;
   padding-bottom: 1rem !important;
}
/*optimization for swiper*/
.swiper-slide {
   will-change: transform;
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
   touch-action: manipulation;
   -webkit-tap-highlight-color: transparent;
   transition: transform 0.5s ease, opacity 0.5s ease;
}
.swiper-slide-active {
   pointer-events: auto;
   z-index: 10;
}

